--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="yandex-verification" content="fc48d867abeba680" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/x.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -54,9 +54,9 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="#about">About</a></li>
-                                            <li><a href="#speakers">Speakers</a></li>
-                                            <li><a href="#sponsors">Sponsors</a></li>
+                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="performer.html">Speakers</a></li>
+                                            <li><a href="#sponsors.html">Sponsors</a></li>
                                             <li><a href="#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="#contact">Contact</a></li>
@@ -103,7 +103,7 @@
                                 <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</span>
                             </h3> -->
                             <h3 id="themeHeading" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-family: tedFont;"> Theme: Prosper.Sapience<span id="x"></span>
+                                style="font-family: tedFont;">Prosper.Sapience<span id="x"></span>
                             </h3>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
                                 style="font-family: tedFont;">November 22nd, 2020</span>
@@ -141,12 +141,12 @@
     <!-- slider_area_end -->
 
     <!-- about_area_start  -->
-    <div id="about" class="about_area black_bg">
+    <div id="about" class="about_area black_bg mt-3">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> Prosper.Sapience:</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> Theme: Prosper.Sapience:</h3>
                         <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">“Prosperity is a mindset. It is our expectation and quest for
                             it.”
@@ -330,7 +330,7 @@
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>>Ravichandran C</h4>
+                                    <h4>Ravichandran C</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
@@ -387,7 +387,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <div class="col-lg-3 col-md-6 col-9" >
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -396,7 +396,7 @@
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Madhusudanan C G</h4>
+                                    <h4>Dr. Madhusudanan C G</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
@@ -407,12 +407,34 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- performar_area_end  -->
+
+
+    <!-- speaker area -->
+    <div id="speakers" class="performar_area black_bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section_title mb-80">
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performers</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="row">
+                        
+                        <div class="col-lg-3 col-md-6 col-9" >
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/Raymi.jpg" alt="">
+                                            src="img/Speaker Photos/Raymi 2.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
@@ -427,8 +449,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" >
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -457,6 +479,9 @@
         </div>
     </div>
     <!-- performar_area_end  -->
+
+
+    <!-- speaker area end -->
 
     <div id="sponsors" class="brand_area black_bg">
         <div class="container">
