--- a/performer.html
+++ b/performer.html
@@ -54,9 +54,9 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="index.html#about">About</a></li>
+                                            <li><a href="about.html">About</a></li>
                                             <li><a href="#">Speakers</a></li>
-                                            <li><a href="index.html#sponsors">Sponsers</a></li>
+                                            <li><a href="sponsors.html">Sponsers</a></li>
                                             <li><a href="index.html#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="index.html#contact">Contact</a></li>
@@ -87,7 +87,9 @@
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
         <div class="container mt-5">
-
+            <div>
+                <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Speakers</h1>
+            </div>
             <!-- single performer -->
             <div id="p1">
                 <div class="row">
@@ -471,7 +473,7 @@
                     <div class="col-lg-8">
                         <div class="section_title mb-50">
                             <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
-                                data-wow-delay=".3s">Madhusudanan C G
+                                data-wow-delay=".3s">Dr. Madhusudanan C G
                             </h3>
                         </div>
                     </div>
