--- a/register.html
+++ b/register.html
@@ -183,7 +183,7 @@
                     </ul>
                     <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 50px;">
                         TERMS AND CONDITIONS</h3>
-                    <ol>
+                    <ol id="termsAndConditions">
                         <li>
                             <p>
                                 1. Each Ticket you purchase from TEDxTKMCE 2020 is intended to give you a revocable
@@ -359,9 +359,16 @@
 
             <div id="regFormArea" class="row">
                 <div class="col-12">
-                    <iframe width="560" height="315"
-                        src="https://www.yepdesk.com/embed/buy-tickets/5f9f870dc9e77c000113aa1c/private/hrpdh8d53n"></iframe>
-                </div>
+                        
+                        <div class="row mt-3 ">
+                            <div class="col-xl-4 col-lg-4">
+                                <a id="get_tkt" href="https://www.yepdesk.com/embed/buy-tickets/5f9f870dc9e77c000113aa1c/private/hrpdh8d53n" style="font-family: tedFont;">
+                                    Proceed to Booking
+                                    </a>
+                            </div>
+
+                        </div>
+                    </div>
                 <!-- <div class="col-lg-12">
                     <form class="form-contact contact_form" action="" method="post" id="regForm"
                         novalidate="novalidate">
