--- a/performer.html
+++ b/performer.html
@@ -10,7 +10,7 @@
     <meta name="yandex-verification" content="fc48d867abeba680" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/x.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -106,7 +106,8 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Anita Pratp.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Anita Pratp.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -116,8 +117,8 @@
                                                 class="fa fa-twitter"></a>
                                             <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
                                                 class="fa fa-facebook"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -157,7 +158,8 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/kiyosaki.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                        src="img/Speaker Photos/kiyosaki.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -215,7 +217,8 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                        src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -269,17 +272,18 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Susmita.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Susmita.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/susmita_sashimi"
                                                 style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -320,13 +324,14 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Ravichandran .jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Ravichandran .jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
                                             <a href="https://www.facebook.com/Pavithreswaram" style="color: aliceblue;"
                                                 class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/ravichandran_c1970"
@@ -374,18 +379,19 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Radha Gomaty.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Radha Gomaty.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
                                             <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
                                                 class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
                                                 class="fa fa-instagram"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
 
                                         </div>
                                     </div>
@@ -429,7 +435,8 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/sun.png" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/sun.png" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -437,8 +444,8 @@
                                         <div>
                                             <a href="https://twitter.com/sunknudsen" style="color: aliceblue;"
                                                 class="fa fa-twitter"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-instagram"></a>
                                             <a href="https://www.youtube.com/c/SunKnudsen/featured"
                                                 style="color: aliceblue;" class="fa fa-youtube"></a>
 
@@ -484,16 +491,17 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Dr. Madhusoodhanan .jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Dr. Madhusoodhanan .jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -546,14 +554,15 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Raymi 2.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Raymi 2.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/illusionistraymi"
                                                 style="color: aliceblue;" class="fa fa-instagram"></a>
                                             <a href="https://www.youtube.com/c/ramyn/featured" style="color: aliceblue;"
@@ -599,14 +608,15 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
-                                        <img src="img/Speaker Photos/Jo Marshall.jpeg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Jo Marshall.jpeg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/jomarshal.music/"
                                                 style="color: aliceblue;" class="fa fa-instagram"></a>
                                             <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
@@ -748,7 +758,7 @@
         $('#p6').hide();
         // $('#p7').hide();
         //$('#p8').hide();
-        $('#p9').hide();
+        //$('#p9').hide();
        // $('#p10').hide();
 
     </script>
