--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <meta name="yandex-verification" content="fc48d867abeba680" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/x.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
