--- a/sponsors.html
+++ b/sponsors.html
@@ -86,76 +86,41 @@
 
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
-        <div class="container mt-5">
+        <div class="container mt-5 mb-5" style="height: 450px;">
 
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
+            <div class="row">
+                <div class="col-lg-12">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> Theme: Prosper.Sapience:</h3>
-                        <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">“Prosperity is a mindset. It is our expectation and quest for
-                            it.”
-                        </p>
-                        <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">
-                            The evolution of the hominid species to modern-day sapiens took over two million years.
-                            Being the most evolved and intelligent species on planet Earth ,are humans worthy of the
-                            title the wise ones? Does the turbulence and unrest that we showcase show otherwise?
-                            Wisdom is the understanding of the self, being in peace with it and smothering the turbulent
-                            undercurrent that we all possess deep within ourselves. We are in search of stories and
-                            experiences that can enrich every listener out there and help them shape their perspective
-                            and incorporate
-                            ideas of progress and prosperity in their lives.
-                        </p>
+                        <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Our Sponsors</h4>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3>
-                        <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">TED is a
-                            nonprofit
-                            devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
-                            less). TED began in 1984 as a conference where Technology, Entertainment and Design
-                            converged, and today covers almost all topics - from science to business to global issues -
-                            and is covered in most of the languages in the world. TED stands for one mission and
-                            that is: Spread ideas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
-                        <p id="about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">TED is a
-                            global
-                            community, welcoming those people from every discipline and culture that passionately
-                            believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED
-                            aims to build a clearinghouse of free knowledge from the world's most inspired thinkers
-                            and through that, bring forth a community of curious souls to engage with ideas and each
-                            other, both online and at TED and TEDx events around the world, all year long.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3>
-                        <p id="about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">At its
-                            premier edition in
-                            2018, with the theme of "Alchemy", TEDxTKMCE brought 8 illustrious speakers from across
-                            the world and from different stratas of society. Aiming to bust myths and unravel lustrous
-                            possibilities.
-                            . Following in its footsteps and unfazed by the greatest challenge our generation has
-                            faced till date, This year, We bring TEDxTKMCE Virtual.
-                            TEDx is a haven wherein thoughts are sown, ideas sprout and innovation thrives. Our mission
-                            is to use this virtuous dais to reach inward and exonerate the power within and truly bring
-                            out the best in our audience and make us a beacon of resilience in these difficult times.
-                        </p>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="brand_wrap">
+                        <div class="brand_active owl-carousel">
+                            <!-- <div class="single_brand text-center">
+                                <img src="img/brand/1.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/2.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/3.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/4.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/5.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/1.png" alt="">
+                            </div>
+                            <div class="single_brand text-center">
+                                <img src="img/brand/2.png" alt="">
+                            </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
