--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="performer.html">Speakers</a></li>
-                                            <li><a href="#sponsors.html">Sponsors</a></li>
+                                            <li><a href="sponsors.html">Sponsors</a></li>
                                             <li><a href="#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="#contact">Contact</a></li>
@@ -247,8 +247,8 @@
                                             class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -311,11 +311,11 @@
                                 <div class="performer_heading">
                                     <h4>Susmita Adhikari</h4>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/susmita_sashimi" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -333,7 +333,7 @@
                                     <h4>Ravichandran C</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/Pavithreswaram" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/ravichandran_c1970" style="color: aliceblue;"
@@ -355,12 +355,12 @@
                                 <div class="performer_heading">
                                     <h4>Radha Gomaty</h4>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -379,8 +379,8 @@
                                     <div>
                                         <a href="https://twitter.com/sunknudsen" style="color: aliceblue;"
                                             class="fa fa-twitter"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="https://www.youtube.com/c/SunKnudsen/featured"
                                             style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
@@ -399,10 +399,10 @@
                                     <h4>Dr. Madhusudanan C G</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -440,8 +440,8 @@
                                 <div class="performer_heading">
                                     <h4>Illusionist Raymi</h4>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/illusionistraymi" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
                                         <a href="https://www.youtube.com/c/ramyn/featured" style="color: aliceblue;"
@@ -462,8 +462,8 @@
                                     <h4>Jo Marshall</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/jomarshal.music/" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
                                         <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
@@ -496,7 +496,7 @@
                 <div class="col-lg-12">
                     <div class="brand_wrap">
                         <div class="brand_active owl-carousel">
-                            <div class="single_brand text-center">
+                            <!-- <div class="single_brand text-center">
                                 <img src="img/brand/1.png" alt="">
                             </div>
                             <div class="single_brand text-center">
@@ -516,7 +516,7 @@
                             </div>
                             <div class="single_brand text-center">
                                 <img src="img/brand/2.png" alt="">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
